k8s/04-simulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollisense-simulator
  namespace: pollisense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pollisense-simulator
  template:
    metadata:
      labels:
        app: pollisense-simulator
    spec:
      containers:
        - name: simulator
          image: pollisense-simulator:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
