k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pollisense-frontend
  namespace: pollisense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pollisense-frontend
  template:
    metadata:
      labels:
        app: pollisense-frontend
    spec:
      containers:
        - name: frontend
          image: pollisense-frontend:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 101
            runAsGroup: 101
            runAsNonRoot: true
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: pollisense-frontend
  namespace: pollisense
spec:
  type: ClusterIP
  selector:
    app: pollisense-frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
